--- a/emails/hir-campaign-adverts.html.twig
+++ b/emails/hir-campaign-adverts.html.twig
@@ -3,12 +3,14 @@
 {% set protocol = cdn_enabled == 1 ? 'http:' : drupal_token('site:url') %}
 <div class="tg-wrap">
     <table class="tg">
+      {% set image_url = drupal_config('rir_interface.social_media', 'email_banner_image') %}
+      {% if image_url %}
         <tr>
-            <td class="tg-0pky" colspan="2">
-                <img src="{{ 'https://jirbucket.s3.eu-central-1.amazonaws.com/banners/HiR/Brand+Awareness/HiR_System_Email_Top_Banner.gif'|image_style('email_banner') }}"
-                     class="templateImage" alt="email_banner">
-            </td>
+          <td class="tg-0pky" colspan="2">
+            <img src="{{ image_url }}" class="templateImage" alt="email_banner">
+          </td>
         </tr>
+      {% endif %}
         <tr>
             <td class="tg-0lax" colspan="2">
                 {% set manyAdverts = adverts|length > 1 ? true : false %}
