hide overflow on sidebars

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -136,7 +136,7 @@
                 </section>
               </main>
               {% if show_sidebars and (page.sidebar_first or page.sidebar_second or page.sidebar_horizontal) %}
-                <div class="col-12 col-md-4" id="combined-sidebars">
+                <div class="col-12 col-md-4 overflow-hidden" id="combined-sidebars">
                   {% if page.sidebar_horizontal %}
                     {{ page.sidebar_horizontal }}
                   {% endif %}
