fix closed title

--- a/templates/node--agent--full.html.twig
+++ b/templates/node--agent--full.html.twig
@@ -94,6 +94,7 @@
             <dt class="col-4 col-md-4">{{ content.field_agent_operations_area|field_label }}</dt>
             <dd class="col-8 col-md-8 m-0">{{ content.field_agent_operations_area|field_value }}</dd>
           </dl>
+          {{ content.field_agent_summary|field_value }}
         </div>
         <div class="agent-contact-details px-2 text-white rounded">
           <div class="agent-phone"><i class="fas fa-phone-alt"></i> {{ node.field_agent_phone.value }}</div>
