--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -78,7 +78,8 @@
                 <div class="container">
                   <div class="d-flex flex-nowrap justify-content-between">
                     <div class="logo-region">{{ page.top_header }}</div>
-                    <div class="header-right-region">{{ page.top_header_form }}</div>
+                    {{ page.top_header_form }}
+{#                    <div class="header-right-region">{{ page.top_header_form }}</div>#}
                   </div>
                 </div>
               </div>
