--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -76,10 +76,9 @@
             <div class="container-fluid flex-column p-0">
               <div class="hir-header-navbar bg-white w-100 pt-2">
                 <div class="container">
-                  <div class="d-flex flex-nowrap justify-content-between">
+                  <div class="d-flex flex-nowrap justify-content-between align-items-center">
                     <div class="logo-region">{{ page.top_header }}</div>
-                    {{ page.top_header_form }}
-{#                    <div class="header-right-region">{{ page.top_header_form }}</div>#}
+                    <div class="ms-2 ms-md-0">{{ page.top_header_form }}</div>
                   </div>
                 </div>
               </div>
