--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -111,7 +111,7 @@
               </div>
               <div class="advert-buttons">
                 {% if node.field_advert_video_presentation.value %}
-                  <i class="fa-brands fa-youtube"></i>
+                  <i class="fa fa-youtube text-danger"></i>
                 {% endif %}
                 {% if content.is_featured %}
                   <i class="fa fa-star text-warning"></i>
