--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -105,7 +105,7 @@
               </p>
             </div>
             <div class="advert-body-bottom d-flex justify-content-between">
-              <div class="d-flex gap-1">{{ content.property_type_pill }}
+              <div class="gap-1">{{ content.property_type_pill }}
                 <span class="badge bg-success">{{ content.field_advert_type|field_value }}</span>
                 <small class="text-muted">| Ref: {{ content.field_advert_reference|field_value }}</small>
               </div>
