fix teaser buttons

--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -111,10 +111,10 @@
               </div>
               <div class="advert-buttons">
                 {% if node.field_advert_video_presentation.value %}
-                  <i class="fa-brands fa-youtube fa-2x text-danger"></i>
+                  <i class="fa-brands fa-youtube fa-lg text-danger"></i>
                 {% endif %}
                 {% if content.is_featured %}
-                  <i class="fa-solid fa-star fa-2x text-warning"></i>
+                  <i class="fa-solid fa-star fa-lg text-warning"></i>
                 {% endif %}
               </div>
             </div>
