fix teaser buttons

--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -114,7 +114,7 @@
                   <i class="fa-brands fa-youtube fa-xl text-danger"></i>
                 {% endif %}
                 {% if content.is_featured %}
-                  <i class="fa-solid fa-star fa-xl text-warning"></i>
+                  <i class="fa-solid fa-star fa-lg text-warning"></i>
                 {% endif %}
               </div>
             </div>
