--- a/emails/hir-propose-adverts-pr.html.twig
+++ b/emails/hir-propose-adverts-pr.html.twig
@@ -4,8 +4,10 @@
   <table class="tg">
     <tr>
       <td class="tg-0pky" colspan="2">
-        <img src="{{ protocol ~ 'public://default_images/email_banner.gif'|image_style('email_banner') }}"
-             class="templateImage" alt="email_banner">
+        <a href="http://hirproposed.s3-website.eu-central-1.amazonaws.com" target="_blank">
+          <img src="https://rirbucket.s3.eu-central-1.amazonaws.com/banners/HiR_PR_Proposed_Submission_Banner.gif"
+               class="templateImage" alt="email_banner">
+        </a>
       </td>
     </tr>
     <tr>
