--- a/scss/import.scss
+++ b/scss/import.scss
@@ -12,4 +12,4 @@
 // mixins
 @import "mixins";
 // barrio
-@import "../../contrib/bootstrap_barrio/scss/barrio";
+//@import "../../contrib/bootstrap_barrio/scss/barrio";
