--- a/scss/style.scss
+++ b/scss/style.scss
@@ -154,4 +154,6 @@ div.site-footer__bottom {
   background-position: bottom;
 }
 
-
+div#toolbar-administration > nav#toolbar-bar {
+  z-index: 1032;
+}
