--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -26,4 +26,9 @@
     <i class="fa fa-youtube fa-2x" aria-hidden="true" style="color: #FF0100; margin-left: 3px; margin-right: 3px;"></i>
   </a>
 {% endif %}
-<img src="https://www.google-analytics.com/collect?v=1&tid=UA-107151364-1&t=event&ec=email&ea=open"/>
+{% if drupal_token('site:whatsapp') is not empty %}
+  <a href="{{ drupal_token('site:whatsapp') }}" target="_blank" style="text-decoration: none">
+    <i class="fa fa-whatsapp-square fa-2x" aria-hidden="true" style="color: #25D366; margin-left: 3px; margin-right: 3px;"></i>
+  </a>
+{% endif %}
+<img src="https://www.google-analytics.com/collect?v=1&tid=UA-107151364-1&t=event&ec=email&ea=open" alt="google_analytics"/>
