--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -8,12 +8,12 @@
 {% endif %}
 {% if drupal_token('site:facebook') is not empty %}
   <a href="{{ drupal_token('site:facebook') }}" target="_blank" style="text-decoration: none">
-    <i class="fa fa-facebook-official fa-2x" aria-hidden="true" style="color: #0B8AEF; margin-left: 3px; margin-right: 3px;"></i>
+    <i class="fa fa-square-facebook fa-2x" aria-hidden="true" style="color: #0B8AEF; margin-left: 3px; margin-right: 3px;"></i>
   </a>
 {% endif %}
 {% if drupal_token('site:twitter') is not empty %}
   <a href="{{ drupal_token('site:twitter') }}" target="_blank" style="text-decoration: none">
-    <i class="fa fa-twitter-square fa-2x" aria-hidden="true" style="color: #1A91DA; margin-left: 3px; margin-right: 3px;"></i>
+    <i class="fa fa-square-x-twitter fa-2x" aria-hidden="true" style="color: #1A91DA; margin-left: 3px; margin-right: 3px;"></i>
   </a>
 {% endif %}
 {% if drupal_token('site:instagram') is not empty %}
@@ -28,7 +28,7 @@
 {% endif %}
 {% if drupal_token('site:whatsapp') is not empty %}
   <a href="{{ drupal_token('site:whatsapp') }}" target="_blank" style="text-decoration: none">
-    <i class="fa fa-whatsapp-square fa-2x" aria-hidden="true" style="color: #25D366; margin-left: 3px; margin-right: 3px;"></i>
+    <i class="fa fa-square-whatsapp fa-2x" aria-hidden="true" style="color: #25D366; margin-left: 3px; margin-right: 3px;"></i>
   </a>
 {% endif %}
 <img src="https://www.google-analytics.com/collect?v=1&tid=UA-107151364-1&t=event&ec=email&ea=open" alt="google_analytics"/>
