--- a/templates/includes/footer.html.twig
+++ b/templates/includes/footer.html.twig
@@ -13,7 +13,7 @@
 {% endif %}
 {% if drupal_token('site:twitter') is not empty %}
   <a href="{{ drupal_token('site:twitter') }}" target="_blank" style="text-decoration: none">
-    <i class="fa fa-square-x-twitter fa-2x" aria-hidden="true" style="color: #1A91DA; margin-left: 3px; margin-right: 3px;"></i>
+    <i class="fa fa-square-x-twitter fa-2x" aria-hidden="true" style="color: white; margin-left: 3px; margin-right: 3px;"></i>
   </a>
 {% endif %}
 {% if drupal_token('site:instagram') is not empty %}
