--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -69,6 +69,17 @@
 #}
 <div id="page-wrapper">
   <div id="page">
+      <div class="alert alert-primary alert-dismissible fade show rounded-0" role="alert" id="android-app-spot" hidden>
+          <div class="row">
+              <b class="col-8">HouseInRwanda App</b>
+              <div class="col-4">
+                  <a
+                          class="btn btn-sm btn-outline border-white text-white float-end"
+                          href="https://play.google.com/store/apps/details?id=com.houseinrwanda.houseinrwanda&pli=1">Get the app</a>
+                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+          </div>
+      </div>
     <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
