Create mobile app banner

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -74,7 +74,7 @@
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
           <nav{{ navbar_attributes.addClass('d-flex flex-column p-0 fixed-top') }}>
             <div class="container-fluid flex-column p-0">
-                <div class="alert alert-primary alert-dismissible fade show rounded-0 w-100" role="alert" id="android-app-spot" hidden>
+                <div class="alert alert-success alert-dismissible fade show rounded-0 w-100" role="alert" id="android-app-spot" hidden>
                     <div class="row">
                         <b class="col-8">HouseInRwanda App</b>
                         <div class="col-4">
