--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -74,9 +74,9 @@
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
           <nav{{ navbar_attributes.addClass('d-flex flex-column p-0 fixed-top') }}>
             <div class="container-fluid flex-column p-0">
-                <div class="alert alert-dismissible fade show rounded-0 w-100" role="alert" id="android-app-spot" hidden>
-                    <div class="row">
-                        <b class="col-8">HouseInRwanda App</b>
+                <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
+                    <div class="row align-items-center">
+                        <b class="col-8 text-white">HouseInRwanda App</b>
                         <div class="col-4">
                             <a
                                     class="btn btn-sm btn-outline border-white text-white float-end"
