add hir logo to app banner

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -76,7 +76,10 @@
             <div class="container-fluid flex-column p-0">
                 <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
                     <div class="row align-items-center">
-                        <b class="col-8 text-white">HouseInRwanda App</b>
+                        <div class="col-8">
+                            <img src="{{ base_path ~ directory  }}/images/hir_app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-5 me-2">
+                            <b class="text-white">HouseInRwanda App</b>
+                        </div>
                         <div class="col-4">
                             <a
                                     class="btn btn-sm btn-outline border-white text-white float-end"
