--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -77,7 +77,7 @@
                 <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
                     <div class="row align-items-center">
                         <div class="col-8">
-                            <img src="{{ base_path ~ directory  }}/images/hir_app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-5 me-2">
+                            <img src="{{ base_path ~ directory  }}/images/hir_app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px">
                             <b class="text-white">HouseInRwanda App</b>
                         </div>
                         <div class="col-4">
