add hir logo to app banner

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -78,7 +78,7 @@
                     <div class="row align-items-center">
                         <div class="col-8">
                             <img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px">
-                            <b class="text-white">HouseInRwanda App</b>
+                            <span class="text-white"><b>HouseInRwanda App</b> <br>Better user experience</span>
                         </div>
                         <div class="col-4">
                             <a
