add hir logo to app banner

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -76,9 +76,9 @@
             <div class="container-fluid flex-column p-0">
                 <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
                     <div class="row align-items-center">
-                        <div class="col-8">
+                        <div class="col-8 d-inline-flex">
                             <img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px">
-                            <span class="text-white"><b>HouseInRwanda App</b> <br>Better user experience</span>
+                            <span class="text-white"><b>HouseInRwanda App</b> <br><small>Better user experience</small></span>
                         </div>
                         <div class="col-4">
                             <a
