add hir logo to app banner

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -77,10 +77,10 @@
                 <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
                     <div class="row align-items-center">
                         <div class="col-8 d-inline-flex">
-                            <img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 50px">
-                            <span class="text-white"><b>HouseInRwanda App</b> <br><small>Better user experience</small></span>
+                            <img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px">
+                            <span class="text-white"><small style="font-size: 18px">HouseInRwanda App</small> <br><small style="font-size: 10px">Better user experience</small></span>
                         </div>
-                        <div class="col-4">
+                        <div class="col-4" style="font-size: 10px">
                             <a
                                     class="btn btn-sm btn-outline border-white text-white float-end"
                                     href="https://play.google.com/store/apps/details?id=com.houseinrwanda.houseinrwanda&pli=1">Get the app</a>
