--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -78,12 +78,14 @@
                     <div class="row align-items-center">
                         <div class="col-8 d-inline-flex">
                             <img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px">
-                            <span class="text-white"><small style="font-size: 18px">HouseInRwanda App</small> <br><small style="font-size: 10px">Better user experience</small></span>
+                            <p class="text-white">
+                                <small style="font-size: 18px">HouseInRwanda App</small> <br>
+                                <small style="font-size: 10px">Better user experience</small></p>
                         </div>
-                        <div class="col-4" style="font-size: 10px">
+                        <div class="col-4">
                             <a
                                     class="btn btn-sm btn-outline border-white text-white float-end"
-                                    href="https://play.google.com/store/apps/details?id=com.houseinrwanda.houseinrwanda&pli=1">Get the app</a>
+                                    href="https://play.google.com/store/apps/details?id=com.houseinrwanda.houseinrwanda&pli=1" style="font-size: 10px">Get the app</a>
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     </div>
