--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -76,11 +76,16 @@
             <div class="container-fluid flex-column p-0">
                 <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
                     <div class="row align-items-center">
-                        <div class="col-8 d-inline-flex">
-                            <img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px">
-                            <p class="text-white">
-                                <small style="font-size: 18px">HouseInRwanda App</small> <br>
-                                <small style="font-size: 10px">Better user experience</small></p>
+                        <div class="col-8">
+                            <div class="row">
+                                <div class="col"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px"></div>
+                                <div class="col">
+                                    <p class="text-white m-0">
+                                        <small style="font-size: 18px">HouseInRwanda App</small> <br>
+                                        <small style="font-size: 10px">Better user experience</small>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-4">
                             <a
