--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -80,10 +80,8 @@
                             <div class="row">
                                 <div class="col"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px"></div>
                                 <div class="col">
-                                    <p class="text-white m-0">
-                                        <small style="font-size: 18px">HouseInRwanda App</small> <br>
-                                        <small style="font-size: 10px">Better user experience</small>
-                                    </p>
+                                    <h4>HouseInRwanda App</h4>
+                                    <p>Better user experience</p>
                                 </div>
                             </div>
                         </div>
