--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -78,10 +78,10 @@
                     <div class="row align-items-center">
                         <div class="col-8">
                             <div class="row">
-                                <div class="col"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2 me-1" style="max-height: 40px"></div>
-                                <div class="col">
-                                    <h4>HouseInRwanda App</h4>
-                                    <p>Better user experience</p>
+                                <div class="col-4"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2"></div>
+                                <div class="col-8 text-white">
+                                    <h6>HouseInRwanda App</h6>
+                                    <p class="m-0">Better user experience</p>
                                 </div>
                             </div>
                         </div>
