--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -79,9 +79,9 @@
                         <div class="col-8">
                             <div class="row">
                                 <div class="col-4"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2"></div>
-                                <div class="col-8 text-white">
+                                <div class="col-8 text-white g-0">
                                     <h6>HouseInRwanda App</h6>
-                                    <p class="m-0">Better user experience</p>
+                                    <small class="m-0">Better user experience</small>
                                 </div>
                             </div>
                         </div>
