add hir logo to app banner

--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -78,10 +78,10 @@
                     <div class="row align-items-center">
                         <div class="col-8">
                             <div class="row">
-                                <div class="col-4"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2"></div>
-                                <div class="col-8 text-white g-0">
-                                    <h6>HouseInRwanda App</h6>
-                                    <small class="m-0">Better user experience</small>
+                                <div class="col-3"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2"></div>
+                                <div class="col-9 text-white g-0">
+                                    <h6 style="font-size: 14px">HouseInRwanda App</h6>
+                                    <small class="m-0" style="font-size: 10px">Better user experience</small>
                                 </div>
                             </div>
                         </div>
