--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -80,7 +80,7 @@
                             <div class="row">
                                 <div class="col-3"><img src="{{ base_path ~ directory  }}/images/app_logo.png" alt="HouseInRwanda Logo" class="img-fluid rounded-2"></div>
                                 <div class="col-9 text-white g-0">
-                                    <h6 style="font-size: 14px">HouseInRwanda App</h6>
+                                    <h6 class="m-0" style="font-size: 14px">HouseInRwanda App</h6>
                                     <small class="m-0" style="font-size: 10px">Better user experience</small>
                                 </div>
                             </div>
