--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -74,7 +74,7 @@
         {% if page.secondary_menu or page.top_header or page.top_header_form %}
           <nav{{ navbar_attributes.addClass('d-flex flex-column p-0 fixed-top') }}>
             <div class="container-fluid flex-column p-0">
-                <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" hidden>
+                <div class="alert alert-dismissible fade show rounded-0 w-100 m-0" role="alert" id="android-app-spot" style="background-color: #248CC7FF" hidden>
                     <div class="row align-items-center">
                         <div class="col-8">
                             <div class="row">
