--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -88,7 +88,7 @@
                         <div class="col-4">
                             <a
                                     class="btn btn-sm btn-outline border-white text-white float-end"
-                                    href="{{ drupal_token(site:android) }}" style="font-size: 10px">Get the app</a>
+                                    href="{{ drupal_token('site:android') }}" style="font-size: 10px">Get the app</a>
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         <div class="col-4">
                             <a
                                     class="btn btn-sm btn-outline border-white text-white float-end"
-                                    href="{{ drupal_token(site:ios) }}" style="font-size: 10px">Get the app</a>
+                                    href="{{ drupal_token('site:ios') }}" style="font-size: 10px">Get the app</a>
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     </div>
