--- a/templates/node--agent--full.html.twig
+++ b/templates/node--agent--full.html.twig
@@ -79,11 +79,11 @@
   <div{{ content_attributes.addClass('node__content', 'clearfix', 'card', 'bg-white', 'border-warning', 'p-2', 'mb-3') }}>
     <div class="d-flex flex-wrap justify-content-center flex-md-nowrap">
       <div class="flex-shrink-0">
-        <img src="{{ logo_uri }}" alt="{{ node.title.value }}">
+        <img src="{{ logo_uri }}" alt="employer photo">
       </div>
       <div class="d-flex flex-column flex-md-grow-1 ms-0 ms-md-2 justify-content-between">
         <div class="agent-identification-details">
-          <h4 class="text-center text-md-start">{{ node.title.value }}</h4>
+          <h4 class="text-center text-md-start">{{ label }}</h4>
           <dl class="row">
             <dt class="col-4 col-md-4">{{ content.field_advertiser_type|field_label }}</dt>
             <dd class="col-8 col-md-8 m-0">{{ content.field_advertiser_type|field_value }}</dd>
