--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -95,7 +95,14 @@
           <div class="advert-body flex-grow-1 d-flex flex-column justify-content-between">
             <div class="advert-body-main">
               <span><i class="fa fa-map-marker-alt"></i> {{ node.field_advert_locality_province.value }}, {{ node.field_advert_locality_district.value }}{% if node.field_advert_locality_sector is not empty %}, {{ node.field_advert_locality_sector.value }}{% endif %}</span>
-              <p class="mb-0 d-flex"> <span>Published on {{ date(publishedOn)|date('j F') }} | Expires on {{ date(expiresOn)|date('j F') }} {% if publisher %}|</span> <span><span>Published by </span>{{ drupal_link(publisher.title.value, 'node/' ~ publisher.id) }}</span></p>{% endif %}
+              <p class="mb-0 d-flex">
+                <span>Published on {{ date(publishedOn)|date('j F') }} | Expires on {{ date(expiresOn)|date('j F') }} {% if publisher %}|</span>
+                <span>
+                  <span class="px-1">Published by</span>
+                  {{ drupal_link(publisher.title.value, 'node/' ~ publisher.id) }}
+                </span>
+              </p>
+              {% endif %}
               <p class="mb-0">
                 <strong>Advert: </strong>{{ content.field_advert_type|field_value }},
                 <strong>Property: </strong>{{ content.field_advert_property_type|field_value }}{% if property_type != 'land' %},
