--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -100,6 +100,7 @@
                 <span class="d-flex">
                   <span class="px-1">Published by</span>
                   {{ drupal_link(publisher.title.value, 'node/' ~ publisher.id) }}
+                  <a href="#">{{ publisher.label }}</a>
                 </span>
               </p>
               {% endif %}
