--- a/templates/node--advert--teaser.html.twig
+++ b/templates/node--advert--teaser.html.twig
@@ -99,7 +99,7 @@
                 <span>Published on {{ date(publishedOn)|date('j F') }} | Expires on {{ date(expiresOn)|date('j F') }} {% if publisher %}|</span>
                 <span class="d-flex">
                   <span class="px-1">Published by</span>
-                  {{ drupal_link(publisher.label, 'node/' ~ publisher.id) }}
+                  {{ drupal_link(content.agent_label, 'node/' ~ publisher.id) }}
                 </span>
               </p>
               {% endif %}
