--- a/templates/node--agent--slider.html.twig
+++ b/templates/node--agent--slider.html.twig
@@ -81,7 +81,7 @@
         <div class="text-nowrap overflow-hidden"><i class="fas fa-map-marker-alt"></i> {{ node.field_agent_operations_area.value }}</div>
       </div>
       <div class="col-4">
-        <img src="{{ image_uri }}" class="card-img-top" alt="employer photo">
+        <img src="{{ image_uri }}" class="card-img-top" alt="employer photo" style="width: auto">
       </div>
     </div>
   </div>
