Adapt email banner size

--- a/emails/hir-propose-adverts-pr.html.twig
+++ b/emails/hir-propose-adverts-pr.html.twig
@@ -6,7 +6,7 @@
       <td class="tg-0pky" colspan="2">
         <a href="http://hirproposed.s3-website.eu-central-1.amazonaws.com" target="_blank">
           <img src="https://rirbucket.s3.eu-central-1.amazonaws.com/banners/HiR_PR_Proposed_Submission_Banner.gif"
-               class="templateImage" alt="email_banner">
+               class="templateImage" alt="email_banner" style="max-width: 640px;">
         </a>
       </td>
     </tr>
